Start adding TKinter UI to gpio_control.py

--- a/config/shell_command.cfg
+++ b/config/shell_command.cfg
@@ -1,6 +1,5 @@
-[gcode_shell_command py22]
-command: echo
-timeout: 2
+[gcode_shell_command gpio_control]
+command: python3 gpio_control.py
 verbose: True
 
 [gcode_macro T0]
