--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -53,7 +53,9 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: ^PA7
 position_endstop: 0
-position_max: 20
+# Dominic measured the Z-stick + top of our fixture as (58 + 41) mm ~= 100 mm
+# Therefore, the correct limit will be around (250 - 100) mm = 150 mm
+position_max: 120
 
 [extruder]
 max_extrude_only_distance: 100.0
