Add G-code macro calls and begin automation script

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 !.gitignore
 !Readme.md
 config/**
+!config/macros.cfg
 !config/printer.cfg
-!config/shell_command.cfg
 !scripts
 !scripts/**
 __pycache__/
