Fix some issues with G-code macros

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -1,31 +1,25 @@
 [gcode_shell_command await_bioprintly]
-command: python3 scripts/bioprintly/automation.py
+command: python3 ../printer_data/scripts/bioprintly/automation.py
 verbose: True
 
 [gcode_macro M140]
 rename_existing: M140.1
 gcode:
-	{% if rawparams %}
-		RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="M140 {rawparams}"
-		M140.1 {rawparams}
-	{% endif %}
+	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="M140 {rawparams}"
+	M140.1 {rawparams}
 
 [gcode_macro T0]
-rename_existing: T0.1
 gcode:
-	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS=T0
+	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T0 {rawparams}"
 [gcode_macro T1]
-rename_existing: T1.1
 gcode:
-	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS=T1
+	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T1"
 [gcode_macro T2]
-rename_existing: T2.1
 gcode:
-	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS=T2
+	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T2"
 [gcode_macro T3]
-rename_existing: T3.1
 gcode:
-	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS=T3
+	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T3"
 
 [gcode_macro G1]
 rename_existing: G1.1
