Add request handling

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -1,6 +1,7 @@
 [gcode_shell_command await_bioprintly]
-command: python3 ../printer_data/scripts/bioprintly/automation.py
+command: python3 ../printer_data/scripts/bioprintly/request.py
 verbose: True
+timeout: 999999999
 
 [gcode_macro M140]
 rename_existing: M140.1
@@ -13,18 +14,16 @@ gcode:
 	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T0 {rawparams}"
 [gcode_macro T1]
 gcode:
-	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T1"
+	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T1 {rawparams}"
 [gcode_macro T2]
 gcode:
-	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T2"
+	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T2 {rawparams}"
 [gcode_macro T3]
 gcode:
-	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T3"
+	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T3 {rawparams}"
 
 [gcode_macro G1]
 rename_existing: G1.1
 gcode:
-	{% if rawparams %}
-		RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="G1 {rawparams}"
-		G1.1 {rawparams}
-	{% endif %}
+	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="G1 {rawparams}"
+	G1.1 {rawparams}
