Fix request handling for sequential requests

--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -31,7 +31,10 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: ^PA5
 position_endstop: 0
-position_max: 235
+# Mohammad measured the X-endstop stick as 82 mm.
+# This clearance for our hardware should apply to both the left and right ends,
+# so the correct limit will be around (235 - 2 * 82) mm = 71 mm
+position_max: 60
 homing_speed: 50
 
 [stepper_y]
@@ -53,7 +56,7 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: ^PA7
 position_endstop: 0
-# Dominic measured the Z-stick + top of our fixture as (58 + 41) mm ~= 100 mm
+# Dominic measured the Z-endstop stick + top of our fixture as (58 + 41) mm ~= 100 mm
 # Therefore, the correct limit will be around (250 - 100) mm = 150 mm
 position_max: 120
 
