--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -79,6 +79,8 @@ pid_Ki: 1.063
 pid_Kd: 108.982
 min_temp: 0
 max_temp: 250
+# Disabled since we are not using the stock printhead
+min_extrude_temp: 0
 
 [heater_bed]
 heater_pin: PA2
