--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -31,10 +31,8 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: ^PA5
 position_endstop: 0
-# Mohammad measured the X-endstop stick as 82 mm.
-# This clearance for our hardware should apply to both the left and right ends,
-# so the correct limit will be around (235 - 2 * 82) mm = 71 mm
-position_max: 60
+# Experimentally, 120 mm was a good balance between working space and safety.
+position_max: 120
 homing_speed: 50
 
 [stepper_y]
@@ -56,8 +54,7 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: ^PA7
 position_endstop: 0
-# Dominic measured the Z-endstop stick + top of our fixture as (58 + 41) mm ~= 100 mm
-# Therefore, the correct limit will be around (250 - 100) mm = 150 mm
+# Experimentally, 120 mm provided more than enough vertical working space.
 position_max: 120
 
 [extruder]
@@ -79,7 +76,7 @@ pid_Ki: 1.063
 pid_Kd: 108.982
 min_temp: 0
 max_temp: 250
-# Disabled since we are not using the stock printhead
+# Disabled since we are not using the stock printhead.
 min_extrude_temp: 0
 
 [heater_bed]
