Add pulse-width modulation for actuation

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 **
 !.gitignore
 !Readme.md
-!config
+!config/
 config/**
 !config/macros.cfg
 !config/printer.cfg
-!misc
+!gcodes/
+!gcodes/**
+gcodes/.thumbs
+!misc/
 misc/**
 !misc/bioprintly.desktop
-!scripts
+!scripts/
 !scripts/**
 __pycache__/
