--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -43,6 +43,8 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: ^PA6
 position_endstop: 0
+# To achieve a 120x120mm working space centered on the bed, use Y-coords between
+# 80 mm and 200 mm.
 position_max: 235
 homing_speed: 50
 
@@ -64,13 +66,13 @@ dir_pin: PB3
 enable_pin: !PC3
 microsteps: 16
 rotation_distance: 34.406
-nozzle_diameter: 0.400
-filament_diameter: 1.750
+# Our syringe nozzle inner diameter.
+nozzle_diameter: 3.90
+filament_diameter: 3.90
 heater_pin: PA1
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC5
 control: pid
-# tuned for stock hardware with 200 degree Celsius target
 pid_Kp: 21.527
 pid_Ki: 1.063
 pid_Kd: 108.982
@@ -84,7 +86,6 @@ heater_pin: PA2
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
 control: pid
-# tuned for stock hardware with 50 degree Celsius target
 pid_Kp: 54.027
 pid_Ki: 0.770
 pid_Kd: 948.182
