Avoid advancing to flange before rapid transit

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -22,6 +22,12 @@ gcode:
 gcode:
 	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="T3 {rawparams}"
 
+[gcode_macro M83]
+rename_existing: M83.1
+gcode:
+	RUN_SHELL_COMMAND CMD=await_bioprintly PARAMS="M83 {rawparams}"
+	M83.1 {rawparams}
+
 [gcode_macro G1]
 rename_existing: G1.1
 gcode:
